test/good/generics/nested02.px

func f<T>(): T def
    func g(): Int def
        return 2
    g()
    return 'f'

print f()
