test/bad/generics/call06.px

func f<A>(g: A->A): Void def
    return

f(sign)
